# arkworks-tests

./: .gitignore  README.md
1. adding/: Cargo.toml
1. adding/src/: main.rs
Payment Proof/: Cargo.toml
Payment Proof/src/: main.rs  merkletree.rs
Poseidon Commitments/: Cargo.toml
Poseidon Commitments/src/: main.rs  poseidon.rs
malformed_counter/: Cargo.toml
malformed_counter/src/: main.rs
multiply/: Cargo.toml
multiply/src/: main.rs
numbers_add/: Cargo.toml
numbers_add/src/: main.rs
schnorr/: Cargo.toml
schnorr/src/: main.rs
simple_example_2/: Cargo.toml
simple_example_2/src/: main.rs
simplest_possible/: Cargo.toml
simplest_possible/src/: main.rs
