[package]
name = "schnorr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-snark = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "crh", "signature"]}
rand = "0.8.5"
